<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/text_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="end|center"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5"
            android:orientation="vertical"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/left_bracket"
                    style="?android:attr/imageButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:text="@string/left_bracket"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:onClick="onClick"
                    />

                <Button
                    android:id="@+id/right_bracket"
                    style="?android:attr/imageButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onClick"
                    android:layout_weight="1"
                    android:text="@string/right_bracket"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/back_clear"
                    style="?android:attr/imageButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="onClick"
                    android:layout_weight="1"
                    android:text="@string/clear_one"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/clear"
                    style="?android:attr/imageButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/clear_all"
                    android:onClick="onClick"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/number_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:text="@string/_7"
                    android:onClick="onClick"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/number_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/number_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:text="@string/_9"
                    android:onClick="onClick"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <Button
                    android:id="@+id/multiply"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/multiply"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/number_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/number_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/number_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_6"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/minus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/minus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/number_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/number_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/number_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/plus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:id="@+id/divide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/dvide"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/number_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="?android:attr/imageButtonStyle"
                    android:onClick="onClick"
                    android:text="@string/_0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Button
                    android:id="@+id/dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dot"
                    android:onClick="onClick"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    style="?android:attr/imageButtonStyle"
                    />

                <Button
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/result"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>